--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://bible.berinaniesh.xyz/gsc"></script>
+		<script async src="https://versequick.com/gsc"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
@@ -10,7 +10,7 @@
 			}
 			gtag('js', new Date());
 
-			gtag('config', 'G-FVBQV28J16', {
+			gtag('config', 'G-1K234X3EJD', {
 				server_container_url: 'https://analytics.bible.berinaniesh.xyz'
 			});
 		</script>
