--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,7 @@
 		</script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="manifest" href="manifest.json" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -24,7 +25,7 @@
 		/>
 		<meta
 			name="description"
-			content="Read the Holy Word of God with an easily navigable and clean UI without ads"
+			content="Read the Holy Word of God with an easily navigable and clean UI"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
